<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.notifications.NotificationsActivity">
    <EditText
        android:id="@+id/searchTerm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/search_term"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        tools:targetApi="o" />
    <CheckBox
        android:id="@+id/sportsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sports"
        app:layout_constraintEnd_toEndOf="@+id/politicsCheckBox"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="@+id/politicsCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/politicsCheckBox" />
    <CheckBox
        android:id="@+id/travelCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/travel"
        app:layout_constraintEnd_toEndOf="@+id/sportsCheckBox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sportsCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/sportsCheckBox" />
    <CheckBox
        android:id="@+id/entrepreneursCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="8dp"
        android:text="@string/entrepreneurs"
        app:layout_constraintStart_toStartOf="@+id/businessCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/businessCheckBox" />
    <CheckBox
        android:id="@+id/businessCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/business"
        app:layout_constraintStart_toStartOf="@+id/artsCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/artsCheckBox" />
    <CheckBox
        android:id="@+id/artsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="8dp"
        android:text="@string/arts"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <CheckBox
        android:id="@+id/politicsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="24dp"
        android:text="@string/politics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />
    <Switch
        android:id="@+id/sortSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/textView3"
        app:layout_constraintHorizontal_bias="1.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="8dp"
        android:text="@string/enable_notifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintBaseline_toBaselineOf="@+id/sortSwitch"/>
        <!--app:layout_constraintBaseline_toBaselineOf="@+id/sortSwitch"


        app:layout_constraintStart_toStartOf="parent" -->

    <View
        android:id="@+id/divider3"
        android:layout_width="368dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/travelCheckBox" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/categories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchTerm" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/searchTerm" />
</androidx.constraintlayout.widget.ConstraintLayout>